--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://www.worldwildlife.org/species/elephant" alt="elephant">
     <script type="text/javascript" src="./script.js">
 </script>
 
