--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src="https://www.worldwildlife.org/species/elephant" alt="elephant">
+	<img src="https://media.istockphoto.com/id/460637863/photo/panda-eating-bamboo.jpg?s=612x612&w=0&k=20&c=Cx6pWQxIiWt9UDSXIKEXeIFA8-Zv6XU8b2orgoWGkjw=" alt="A cute panda eating bamboo">
     <script type="text/javascript" src="./script.js">
 </script>
 
